--- a/templates/portal.html
+++ b/templates/portal.html
@@ -10,6 +10,7 @@
             {% if session['role'] == 'Administrator' %}
                 <a href="{{ url_for('index', page='devices') }}" class="hover:bg-gray-700 px-3 py-2 rounded {{ 'bg-gray-700' if page == 'devices' else '' }}">Devices</a>
                 <a href="{{ url_for('settings') }}" class="hover:bg-gray-700 px-3 py-2 rounded {{ 'bg-gray-700' if page == 'settings' else '' }}">Settings</a>
+                <a href="{{ url_for('manage_users') }}" class="hover:bg-gray-700 px-3 py-2 rounded">Manage Users</a>
             {% endif %}
         </div>
         <div>
