--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -28,13 +28,13 @@
         {{ form.submit(class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600") }}
     </form>
     <h3 class="text-lg font-medium mb-4">Current Users</h3>
-    <table class="w-full table-auto">
+    <table class="w-full table-fixed border-collapse">
         <thead>
             <tr class="bg-gray-200">
-                <th class="px-4 py-2">Username</th>
-                <th class="px-4 py-2">Role</th>
-                <th class="px-4 py-2">2FA Status</th>
-                <th class="px-4 py-2">Actions</th>
+                <th class="px-4 py-2 text-left min-w-[150px]">Username</th>
+                <th class="px-4 py-2 text-left min-w-[120px]">Role</th>
+                <th class="px-4 py-2 text-left min-w-[100px]">2FA Status</th>
+                <th class="px-4 py-2 text-left min-w-[200px]">Actions</th>
             </tr>
         </thead>
         <tbody>
